2003-03-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03802] fix autoconf
	* acinclude.m4 (AC_W3M_CHECK_VER): warn only

2003-03-11  Yuji Abe <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 03801] fix autoconf
	* acinclude.m4 (AC_W3M_BG_COLOR): fix typo
		(AC_W3M_KANJI_SYMBOLS): check enable_japanese != 'no'
		(AC_W3M_KEYMAP): needs {}
		(AC_W3M_EXTLIBS): don't modify libdir, use extlibdir
		(AC_W3M_SSL): missing x
		(AC_W3M_IMAGE): add AC_DEFINE(USE_IMAGE)
	* config.h.in: s/USE_KANJI_SYMBOLS/KANJI_SYMBOLS/
		add SIZEOF_LONG_LONG
		don't use //, use /* */
	* configure.in: add AC_CHECK_SIZEOF(long long, 0)

2003-03-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* autoconfiscate
	* Makefile.in: added
	* acinclude.m4: added
	* aclocal.m4: added (generated from acinclude.m4 by aclocal)
	* configure.in: added
	* config.h.in: added
	* config.guess: added
	* config.sub: added
	* .cvsignore: add Makefile config.cache config.log config.status
	* configure: generated by autoconf
	* gc/: deleted
	* XMakefile: deleted
	* XXMakefile: deleted
	* NEWS: autoconficate

2003-03-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2003-03-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.4.1
	* version.c.in: update
	* doc/README: version 0.4.1, release date
	* doc-jp/README: ditto
	* NEWS: update

2003-03-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03794] displayBuffer() when CurrentTab == NULL.
	* display.c (displayBuffer): check buf
	* linein.c (inputLineHistSearch): check CurrentTab
		(next_dcompl): check CurrentTab
		(_editor): check CurrentTab
	* main.c (resize_screen): check CurrentTab

2003-03-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03793] incremental search fix
	* main.c (dispincsrch): revert sbuf.pos fix
			start from next position in next forward search
		(srch): start from next position in forward saerch
			if not found, restore original position
		(srch_nxtprv): start from next position in next forward search